<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <!-- android:orientation="vertical"  ürünlerin dikey olması için-->
    <!--
    layout_width,layout_height eger match_content olarak kalırsa her satıra bir ürün sıgar
    -->
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/productImage"
        android:layout_margin="10dp"
        android:contentDescription="@string/productimage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/productName"
        android:text="@string/r_n_ad"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/productPrice"
        android:text="@string/xxx"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="5dp" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addBasketButton"
        android:text="@string/sepete_ekle"
        android:layout_gravity="center"

        />
</LinearLayout>