<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/basketImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/productimage" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/basketProductNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_n_ad"
            android:textSize="24sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/basketProductPriceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_n_fiyat_0"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/basketProductQuantityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adet_0"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp" />
    </LinearLayout>
</LinearLayout>